<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/title"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:minHeight="48dp" />

    <RadioGroup
        android:id="@+id/radioGroupModule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButtonModule1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/module_1" />

        <RadioButton
            android:id="@+id/radioButtonModule2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/module_2" />

        <RadioButton
            android:id="@+id/radioButtonModule3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/module_3" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_task" />

</LinearLayout>
