<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.noriega_julio_practicapmdm_persistencia.ui.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_all_tasks"
            app:destination="@id/navigation_all_tasks" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add_tasks"
        android:name="com.example.noriega_julio_practicapmdm_persistencia.ui.fragments.AddTasksFragment"
        android:label="@string/title_Add_Tasks"
        tools:layout="@layout/fragment_add_tasks" />

    <fragment
        android:id="@+id/navigation_all_tasks"
        android:name="com.example.noriega_julio_practicapmdm_persistencia.ui.fragments.AllTasksFragment"
        android:label="@string/title_All_Tasks"
        tools:layout="@layout/fragment_all_tasks" >
        <action
            android:id="@+id/action_navigation_all_tasks_to_navigation_modules"
            app:destination="@id/navigation_modules" />
    </fragment>
    <fragment
        android:id="@+id/navigation_modules"
        android:name="com.example.noriega_julio_practicapmdm_persistencia.ui.fragments.ModuleTasksFragment"
        android:label="@string/title_Module_Tasks"
        tools:layout="@layout/fragment_all_tasks" >
        <action
            android:id="@+id/action_navigation_modules_to_navigation_add_tasks"
            app:destination="@id/navigation_add_tasks" />
    </fragment>
</navigation>